shimlang/test_scripts/errors/compare_gt_type_error.stderr
 1 | "a" > 2;
         ^
Error: Can't GT String(1, 0, u24([0, 0, 5])) and Integer(2)
